-
Bug
-
Resolution: Done
-
P1: Critical
-
6.1.0 Beta3
-
None
-
98ebf11e44c99a5d5e87a4064db5245bb3cb377d (qt/qtquick3d/dev), a606f9835 (dev), c47b5af77 (6.5), 9a05dc520 (tqtc/lts-6.2)
- can't open doors by clicking
- can't interact with notes in the scene mapped to the doors
- can't interact directly with notes in the left side scene either
- can't drag the ListView across from one door to another
- can't defocus the TextEdit by clicking outside, after fixing previous problems to interact with them in the first place
- can't drag notes on doors unless dragThreshold:0 (ListView filtering takes over the grab)
- left-side 2D area: notes jump when drag begins
- relates to
-
QTBUG-94011 consider adding grabPermissions to Item
-
- Reported
-
- replaces
-
QTBUG-92603 DynamicTexture example input broken
-
- Closed
-
- resulted in
-
QTBUG-104890 PointHandler deactivated on touch screen
-
- Closed
-
-
QTBUG-105609 should be able to add a TapHandler to a Button to modify behavior
-
- Closed
-
-
QTBUG-94012 handlers in underlying or parent items should be able to avoid reacting when a higher-z or child item already handled it
-
- Closed
-